overflow fixed

--- a/src/Components/MainProject/MainProject.css
+++ b/src/Components/MainProject/MainProject.css
@@ -64,7 +64,7 @@
 @media screen and (max-width: 750px) {
   .MainProject .main-title .penIcon {
     width: 5rem;
-    right: -5%;
+    right: 5%;
     top: -40%;
     position: absolute;
   }
